[workspace]
members = ["sim800c"]

GPGSV,2,1,07,10,57,337,,15,14,120,,16,41,236,,18,38,145,*7C
$GPGSV,2,2,07,27,20,223,,29,24,075,,32,08,006,*4A
$GPGLL,,,,,222028.00,V,N*42
$GPRMC,222029.00,V,,,,,,,200824,,,N*78
$GPVTG,,,,,,,,,N*30
$GPGGA,222029.00,,,,,0,00,99.99,,,,,,*6F
$GPGSA,A,1,,,,,,,,,,,,,99.99,99.99,99.99*30
$GPGSV,2,1,07,10,57,337,,15,14,120,,16,41,236,,18,38,145,*7C
$GPGSV,2,2,07,27,20,223,,29,24,075,,32,08,006,*4A
$GPGLL,,,,,222029.00,V,N*43
$GPRMC,222030.00,V,,,,,,,200824,,,N*70
$GPVTG,,,,,,,,,N*30
$GPGGA,222030.00,,,,,0,00,99.99,,,,,,*67
$GPGSA,A,1,,,,,,,,,,,,,99.99,99.99,99.99*30
$GPGSV,2,1,07,10,57,337,,15,14,120,,16,41,236,,18,38,145,*7C